--- a/Ivory.html
+++ b/Ivory.html
@@ -1,1 +1,18 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>Ivory's Home</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <h1>Ivory's Home</h1>
+    <div class="book-container">
+        <button id="prevBtn">⟨ Prev</button>
+        <img id="bookPage" src="images/page1.jpg" alt="Book Page">
+        <button id="nextBtn">Next ⟩</button>
+    </div>
+    <script src="script.js"></script>
+</body>
+</html>
 
